# Snake2D_SDL

./: .gitignore  Actor.cpp  Actor.h  BonusFood.cpp  BonusFood.h  CMakeLists.txt  Collision.cpp  Collision.h  CollisionBox.cpp  Controller.cpp  Controller.h  DataProvider.cpp  DataProvider.h  DifficultyPage.cpp  DifficultyPage.h  FoodManager.cpp  FoodManager.h  Game.cpp  Game.h  GameOverPage.cpp  GameOverPage.h  GamePauseMenu.cpp  GameSettingsPage.cpp  GameSettingsPage.h  GlobalData.cpp  GlobalData.h  HighscorePage.cpp  HighscorePage.h  MainMenuPage.cpp  MainMenuPage.h  Page.cpp  Page.h  README.md  SelectMapPage.cpp  Snake.cpp  Snake.h  Snake2D_SDL.sln  Snake2D_SDL.vcxproj  Snake2D_SDL.vcxproj.filters  SnakeBody.cpp  (+16 more)
assets/: defaultMap.txt  defaultMap.txt - Shortcut.lnk
data/: gameSettings.txt  highscore.txt
src/: Actor.cpp  Actor.h  BonusFood.cpp  BonusFood.h  Collision.cpp  Collision.h  CollisionBox.cpp  CollisionBox.h  Controller.cpp  Controller.h  DataProvider.cpp  DifficultyPage.cpp  EnterNameBox.cpp  EnterNameBox.h  FoodManager.cpp  FoodManager.h  Game.cpp  Game.h  GameOverPage.cpp  GamePauseMenu.cpp  GamePauseMenu.h  GameSettingsPage.cpp  GlobalData.cpp  GlobalData.h  HighscorePage.cpp  HighscorePage.h  MainMenuPage.cpp  MainMenuPage.h  Page.cpp  Page.h  SelectMapPage.cpp  SelectMapPage.h  Snake.cpp  Snake.h  SnakeBody.cpp  SnakeBody.h  SnakeFood.cpp  SnakeFood.h  SnakeHead.h  TextObject.cpp  (+10 more)
